package Methods.tableInfo;

import Client.Patient;
import Methods.dateFormat;

import java.util.ArrayList;

public interface dataForTable{
    String getNumber();
    Object[][] getData();

}
